# logternary

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  update-docs.yml
examples/: examples.py
src/logternary/: __init__.py  projection.py  transforms.py
tests/: test_grid.py  test_projection.py  test_transforms.py
