[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logternary"
dynamic = ["version"]
description = "Log-ternary plots for fold-change visualization between three conditions."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Niklas Breitenbach-Netter" },
]
keywords = [
    "ternary",
    "fold-change",
    "transcriptomics",
    "visualization",
    "projective-space",
    "isometric-log-ratio",
    "compositional-data",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
    "Framework :: Matplotlib",
]
dependencies = [
    "numpy>=1.23",
    "matplotlib>=3.8",
]
[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.urls]
Homepage = "https://github.com/gatoniel/logternary"
Repository = "https://github.com/gatoniel/logternary"
Issues = "https://github.com/gatoniel/logternary/issues"

# ---------------------------------------------------------------------------
# Hatch: dynamic version from source
# ---------------------------------------------------------------------------
[tool.hatch.version]
path = "src/logternary/__init__.py"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",    # line too long — handled by formatter
    "RUF001",  # ambiguous unicode in strings (× is intentional in tick labels)
    "RUF002",  # ambiguous unicode in docstrings (math notation)
    "RUF003",  # ambiguous unicode in comments (math notation)
    "SIM108",  # ternary operator — not always more readable
]

[tool.ruff.lint.isort]
known-first-party = ["logternary"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short"]
